# Projecto_Programacao_web_

./: .env.example  .gitignore  README.md  download_lusofona.py  pyproject.toml  requirements.txt  research_lusofona.py
config/: settings.py  urls.py
data/: tfc_2025.json
escola/: admin.py  models.py  tests.py
escola/migrations/: 0001_initial.py
escola_online/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
escola_online/static/escola_online/: styles.css
escola_online/templates/escola_online/: alunos.html  base.html  curso.html  cursos.html  professores.html
portfolio/: admin.py  models.py  tests.py  urls.py  views.py
portfolio/management/commands/: ensure_superuser.py  seed_portfolio.py
portfolio/migrations/: 0001_initial.py  0002_licenciatura_razoes_escolha_and_more.py  0003_unidadecurricular_avaliacao_and_more.py  0004_competencia_nivel_projeto_url_deploy_and_more.py  0005_alter_makingof_imagem_caderno.py
portfolio/templates/portfolio/: base.html  competencias.html  docentes.html  formacoes.html  home.html  interesses.html  licenciatura.html  makingof.html  projetos.html  tecnologias.html  tfcs.html  ucs.html
scripts/: check_api.py  document_decisions.py  import_dados_portfolio.py  import_lusofona.py  import_tfcs.py  research_api.py
