[project]
name = "projecto-programacao-web"
version = "0.1.0"
description = "Portfolio academico em Django preparado para deploy na Vercel."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==4.2.30",
    "Pillow==11.3.0",
    "psycopg[binary]>=3.2,<3.3",
    "requests==2.32.5",
]

[tool.vercel.scripts]
build = "python manage.py migrate && python manage.py seed_portfolio && python manage.py ensure_superuser && python manage.py collectstatic --noinput"
